[tool.poetry]
name = "flickrknob"
version = "0.3"
description = "Yet another Flickr uploader"
authors = ["Vladimir Kotal <vlada@kotalovi.cz>"]
license = "CNRI-Python"
classifiers = [
    'Development Status :: 6 - Mature',
    'Intended Audience :: End Users/Desktop',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: Implementation :: CPython',
    'Programming Language :: Python :: Implementation :: PyPy',
    'Topic :: Multimedia :: Graphics',
    'Topic :: Software Development :: Libraries :: Python Modules'
]

[tool.poetry.extras]
qa = ["flake8"]

[tool.poetry.dependencies]
python = ">=3.6,<4"
requests = "~2"
python_decouple = ">=3.4"
exifread = ">=2.3.2"
alive_progress = ">=2.0.0"
# flickrapi = ">=1.0"
flickrapi = { path="flickrapi" }

flake8 = { version = "~3", optional = true }

[tool.poetry.scripts]
flickrUploader = "flickrknob.uploader:uploader"
delete_album = "flickrknob.delete_album:delete_album_with_photos"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
